--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -11,10 +11,10 @@ nav a:hover {
     color:black
 }
 .home-title {
-    color:azure
+    color:black
 }
 h4 {
-    color:white
+    color:black
 }
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
@@ -27,17 +27,17 @@ main section {
 }
 #background {
     height: 725px; 
-    background-color:#d3eaf2
+    background-color:#e9f5f9
 }
 body {
-    background-color: #d3eaf2;
+    background-color: #e9f5f9;
 }
 header {
     background-color: #51abcb;
 }
 .book, .join {
-    background-color: #51abcb;
-    color:white;
+    background-color: #134b5f;
+    color:#e9f5f9 ;
     text-decoration: none;
 }
 .book-hover, .join-hover {
@@ -48,7 +48,7 @@ header {
     background-color:#d3eaf2;
 }
 msg h2 {
-    color:white
+    color:black
 }
 msg p {
     color:black
