--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+
 div {
     width: 1600px;
     margin: 0 auto;
@@ -6,12 +8,16 @@ nav a {
     text-align: center;
     color:black;
     text-decoration: none;
+    padding: 35px;
 }
 nav a:hover {
     color:black
 }
 .home-title {
-    color:black
+    color:black;
+    font-family: 'Courgette', 'Brush Script MT (cursive)';
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4 {
     color:black
@@ -31,6 +37,10 @@ main section {
 }
 body {
     background-color: #e9f5f9;
+    font-family: Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color: #51abcb;
@@ -39,6 +49,10 @@ header {
     background-color: #134b5f;
     color:#e9f5f9 ;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book-hover, .join-hover {
     background-color: #51abcb;
@@ -46,19 +60,26 @@ header {
 }
 .msg {
     background-color:#d3eaf2;
+    line-height: 1.5em;
+    padding: 35px;
 }
 msg h2 {
     color:black
 }
 msg p {
-    color:black
+    color:black;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 footer {
     background-color:#51abcb;
-    color:white
+    color:white;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a {
     color:black;
@@ -72,4 +93,19 @@ footer p {
 }
 footer p a:hover {
     text-decoration: underline;
+}
+#logo_link {
+    padding-top: 5px;
+}
+footer .social image {
+    padding-top: 15px;
+}
+.rivers-card, .camping-card, .rapids-cards {
+    margin: 200px o;
+}
+.card-img {
+    border: 10px solid black
+}
+main section img {
+    box-sizing: border-box;
 }
