--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -4,6 +4,15 @@ div {
     width: 1600px;
     margin: 0 auto;
  }
+header {
+    background-color: #51abcb;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
 nav a {
     text-align: center;
     color:black;
@@ -13,6 +22,11 @@ nav a {
 nav a:hover {
     color:black
 }
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
 .home-title {
     color:black;
     font-family: 'Courgette', 'Brush Script MT (cursive)';
@@ -20,20 +34,40 @@ nav a:hover {
     margin-top: 10px;
 }
 h4 {
-    color:black
+    color:white
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-img {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+    color: white;
 }
 .button-box {
     text-align: center;
 }
 main section {
     text-align: center;
+    display: grid;
+    grid-template-columns: 10px;
 }
 #background {
     height: 725px; 
-    background-color:#e9f5f9
+    background-color:#e9f5f9;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body {
     background-color: #e9f5f9;
@@ -42,8 +76,8 @@ body {
     margin: 0;
     padding: 0;
 }
-header {
-    background-color: #51abcb;
+h2 {
+    margin: 0;
 }
 .book, .join {
     background-color: #134b5f;
@@ -62,11 +96,14 @@ header {
     background-color:#d3eaf2;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
-msg h2 {
+#msg h2 {
     color:black
 }
-msg p {
+#msg p {
     color:black;
     font-size: .8em;
     padding-bottom: 15px;
@@ -80,6 +117,9 @@ footer {
     color:white;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a {
     color:black;
@@ -94,18 +134,86 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 }
-#logo_link {
-    padding-top: 5px;
-}
 footer .social image {
     padding-top: 15px;
 }
 .rivers-card, .camping-card, .rapids-cards {
-    margin: 200px o;
+    margin: 200px 0;
+    width: 100%;
 }
 .card-img {
-    border: 10px solid black
+    border: 10px solid black;
+    transition: transform .5s;
+    box-shadow: 5 px 5px 10px #6f7364
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1)
 }
 main section img {
     box-sizing: border-box;
+    width: 100%;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
