--- a/dog/styles/site-plan.css
+++ b/dog/styles/site-plan.css
@@ -20,9 +20,9 @@ Fonts are separated by a | */
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #396E94  ;
-  --nav-link-color: white;
-  --nav-background-color: #7CED3B;
-  --nav-hover-link-color: white;
+  --nav-link-color: black;
+  --nav-background-color: #E8FBDE;
+  --nav-hover-link-color: black;
   --nav-hover-background-color: #396E94;
 }
 
