--- a/dog/styles/site-plan.css
+++ b/dog/styles/site-plan.css
@@ -21,7 +21,7 @@ Fonts are separated by a | */
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #396E94  ;
   --nav-link-color: black;
-  --nav-background-color: #E8FBDE;
+  --nav-background-color: #8BA7B0;
   --nav-hover-link-color: black;
   --nav-hover-background-color: #396E94;
 }
