--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,220 +1,212 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 
-div {
-    width: 1600px;
-    margin: 0 auto;
- }
-header {
-    background-color: #51abcb;
-    display: grid;
-    grid-template-columns: 150px auto;
-}
-nav {
-    display: flex;
-    justify-content: space-around;
-}
-nav a {
-    text-align: center;
-    color:black;
-    text-decoration: none;
-    padding: 35px;
-}
-nav a:hover {
-    color:black
-}
-#logo_link {
-    padding-top: 5px;
-    justify-self: center;
-    align-self: center;
-}
-.home-title {
-    color:black;
-    font-family: 'Courgette', 'Brush Script MT (cursive)';
-    font-size: 2em;
-    margin-top: 10px;
-}
-h4 {
-    color:white
-}
-#hero {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -100px;
-}
-#hero-img {
-    grid-column: 1/4;
-    grid-row: 1/3;
-    z-index: -1;
-    width: 100%;
-}
-#hero-msg {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    margin-top: 100px;
-}
-#hero-msg h1, #hero-msg h4 {
-    text-align: center;
-    color: white;
-}
-.button-box {
-    text-align: center;
-}
-main section {
-    text-align: center;
-    display: grid;
-    grid-template-columns: 10px;
-}
-#background {
-    height: 725px; 
-    background-color:#e9f5f9;
-    grid-column: 1/11;
-    grid-row: 4/9;
-}
 body {
-    background-color: #e9f5f9;
-    font-family: Arial, sans-serif;
+    background-color: white;
+    font-family: "Open Sans", Arial, sans-serif;
     font-size: 22px;
     margin: 0;
     padding: 0;
-}
-h2 {
-    margin: 0;
-}
-.book, .join {
-    background-color: #134b5f;
-    color:#e9f5f9 ;
+   }
+   #content {
+    max-width: 1600px;
+    margin: 0 auto;
+   }
+   header {
+    background-color: #51abcb;
+    display: grid;
+    grid-template-columns: 150px auto;
+   }
+   .logo {
+    width: 80px;
+   }
+   #logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+   }
+   nav {
+    display: flex;
+    justify-content: space-around;
+   }
+   nav a {
+    text-align:center;
+    color: black;
     text-decoration: none;
+    padding: 35px;
+    font-weight: bold;
+   }
+   nav a:hover {
+    background-color: white;
+   }
+   #hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+   }
+   #hero-img {
+    width: 100%;
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+   }
+   #hero-msg {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    margin-top: 200px;
+   }
+   #hero-msg h4 {
+    color: white;
+   }
+   .home-title {
+    font-family: 'Courgette', 'Brush Script MT (cursive)';
+    font-size: 2em;
+    margin-top: 10px;
+    color: black;
+   }
+   .button-box {
+    text-align: center;
+    color: white;
+   }
+   .button-box a {
+    color: white;
+    text-decoration: none;
+   }
+   .home-grid h2 {
+    margin: 0;
+   }
+   .home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+   }
+   .rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+   }
+   .camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+   }
+   .rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+   }
+   #background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+    background-color: #e9f5f9;
+    height: 725px;
+   }
+   .mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+   }
+   .msg {
+    grid-column: 6/10;
+    grid-row: 6/7;
+    background-color: #187CB9;
+    color: white;
+    line-height: 1.5em;
+    padding: 35px;
+    box-shadow: 5px 5px 10px #6f7364;
+   }
+   .book, .join {
+    background-color: #white;
     font-size: 18px;
     padding: 15px 30px;
     margin-top: 50px;
     border-radius: 5px;
-}
-.book-hover, .join-hover {
-    background-color: #51abcb;
-    color:whitesmoke
-}
-.msg {
-    background-color:#d3eaf2;
-    line-height: 1.5em;
-    padding: 35px;
-    grid-column: 6/10;
-    grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-#msg h2 {
-    color:black
-}
-#msg p {
-    color:black;
+   }
+   .msg h2 {
+    font-family: Grandstander, Tahoma, sans-serif;
+    color: black;
+   }
+   .msg p {
     font-size: .8em;
     padding-bottom: 15px;
-}
-.icon {
-    width: 80px;
+   }
+   .rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+   }
+   .card-img {
+    border: 10px solid #187CB9;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+   }
+   .card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+   }
+   .icon {
     padding-top: 10px;
-}
-footer {
-    background-color:#51abcb;
-    color:white;
+   }
+   main {
+    text-align: center;
+   }
+   main section img {
+    box-sizing: border-box;
+   }
+   section {
+    text-align: center;
+   }
+   footer {
     padding: 25px 50px;
     margin-top: 200px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
-footer a {
-    color:black;
-    text-decoration: none;
-}
-footer a:hover {
-    color:black
-}
-footer p {
+   }
+   footer p {
     font-size: 1.2em;
-}
-footer p a:hover {
+   }
+   footer p a:hover {
     text-decoration: underline;
-}
-footer .social image {
+   }
+   footer .social img {
     padding-top: 15px;
-}
-.rivers-card, .camping-card, .rapids-cards {
-    margin: 200px 0;
-    width: 100%;
-}
-.card-img {
-    border: 10px solid black;
-    transition: transform .5s;
-    box-shadow: 5px 5px 10px #6f7364
-}
-.card-img:hover {
-    opacity: .6;
-    transform: scale(1.1)
-}
-main section img {
-    box-sizing: border-box;
-    width: 100%;
-}
-.card-img, .mountains {
-    width: 100%;
-}
-.rivers-card {
-    grid-column: 2/4;
-    grid-row: 2/3;
-}
-.camping-card {
-    grid-column: 5/7;
-    grid-row: 2/3;
-}
-.rapids-card {
-    grid-column: 8/10;
-    grid-row: 2/3;
-}
-.mountains {
-    width: 100%;
-    grid-column: 2/7;
-    grid-row: 5/8;
-    box-shadow: 5px 5px 10px #6f7364
-}
-
-@media screen and (max-width: 900px) {
+   }
+   @media screen and (max-width: 900px) {
     #hero, .home-grid {
-        display: block;
-        height: auto;
+    display: block;
+    height: auto;
     }
     nav, footer {
-        flex-direction: column;
+    flex-direction: column;
     }
     nav a {
-        display: block;
-        padding: 15px;
+    display: block;
+    padding: 15px;
     }
     #hero {
-        margin-top: 0;
+    margin-top: 0;
     }
     #hero-msg {
-        margin-top: 0;
+    margin-top: 0;
     }
     #hero-msg h4 {
-        display: none;
+    display: none;
     }
     .home-title {
-        font-size: 25px;
-        color: #6f7364;
+    font-size: 25px;
+    color: #6f7364;
     }
-    .rivers-card, .camping-card, .rapids-card { 
-        margin: 50px auto;
-        width: 60%;
+    .rivers-card, .camping-card, .rapids-card {
+    margin: 50px auto;
+    width: 60%;
     }
     #background {
-        display: none;
+    display: none;
     }
     .mountains, .msg {
-        width: 80%;
-        display: block;
-        margin: 0 auto;
+    width: 80%;
+    display: block;
+    margin: 0 auto;
     }
     footer {
-        margin-top: 25px;
+    margin-top: 25px;
     }
-}
+   }
+
+
