--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -112,7 +112,7 @@ body {
     box-shadow: 5px 5px 10px #6f7364;
    }
    .book, .join {
-    background-color: #white;
+    background-color: white;
     font-size: 18px;
     padding: 15px 30px;
     margin-top: 50px;
