--- a/dog/styles/index.css
+++ b/dog/styles/index.css
@@ -1,28 +1,62 @@
-body {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 4em;
-    font-size: 18px;
-    text-align: center;
-  }
-logo {
-    width: 20px;
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Nunito:wght@600&family=Varela+Round&display=swap');
+
+header {
+    font-size: 50px;
+}
+.home-title {
+    font-family: "Varela Round";
+    font-size: 2em;
+    margin-top: 10px;
+    grid-column: 2/3;
     grid-row: 1;
-    grid-column: 1;
+    color: black;
+   }
+body {
+    background-color: white;
+    font-family: "Garamond", sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+   }
+.logo {
+    width: 55px;
+    margin-right: 100%;
+    padding: 0;
 }
 #logo_link {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
 }
-nav {
-    background-color: #0978A1;
+.bordercollie {
+    width: 40%;
+    grid-column: 4;
+    grid-row: 2;
 }
-nav a {
-    padding: 1em;
-    min-width: 120px;
-    text-align: center;
-    color: black;
-    text-decoration: none;
-    padding: 10px;
+.dogface {
+    width: 27em;
 }
+.btn-group button {
+    background-color: #396E94; /* Green background */
+    border: 1px solid black; /* Green border */
+    color: white; /* White text */
+    padding: 10px 24px; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    float: left; /* Float the buttons side by side */
+  }
+  
+  .btn-group button:not(:last-child) {
+    border-right: none; /* Prevent double borders */
+  }
+  
+  /* Clear floats (clearfix hack) */
+  .btn-group:after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  /* Add a background color on hover */
+  .btn-group button:hover {
+    background-color: #396E94;
+  }
