--- a/dog/styles/index.css
+++ b/dog/styles/index.css
@@ -8,7 +8,6 @@ head {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
-    grid-area: 1, 1;
     width: 70px;
 }
 #logo_link {
@@ -49,24 +48,14 @@ body {
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
     background-color: white;
-    font-family: "Garamond", sans-serif;
+    font-family: 'Times New Roman', Times, serif, sans-serif;
     font-size: 18px;
     text-indent: 10%;
-    grid-area: 14, 15, 16, 17, 20, 21, 22, 23,;
-   }
+}
 .dogface {
     display: block;
     margin-right: auto;
     margin-left: auto;
     width: 27em;
 }
-.btn-group button {
-    color: white;
-    font: "Garamond", sans-serif;
-    font-size: 20px;
-    border: 1px solid black;
-    float: left;
-    background-color: #396E94;
-    grid-row: 1;
-    grid-column: 1;
-}
+
