--- a/dog/styles/need.css
+++ b/dog/styles/need.css
@@ -1,18 +1,67 @@
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Nunito:wght@600&family=Varela+Round&display=swap');
 
-body {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 4em;
-    font-size: 18px;
-    text-align: center;
-  }
-logo {
-    width: 20px;
-    grid-row: 1;
-    grid-column: 1;
+.logo {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px;
+    width: 70px;
 }
 #logo_link {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
 }
+.nav {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 0px 0px 0px 0px;
+    position: fixed;
+    font-size: 18px;
+    font-family: "Varela Round", "Nunito", Garamond;
+    color: #0978A1;
+    width: 100%;
+    height: 700px;
+}
+.home-title {
+    padding-top: 10px;
+    font-size: 65px;
+    color: #0978A1;
+    font-family: "Varela Round";
+    position: center;
+}
+h1 {
+    font-size: 20px;
+    color:black
+}
+main {
+    padding-right: 570px;
+    padding-top: 50px;
+    padding-bottom: 100px;
+    font-size: 18px;
+    font-family: "Garamond", "Tahoma", "Times New Roman";
+    background: url("images/doglisteningsmall.png")
+    no-repeat right center;
+}
+ol {
+    list-style-type: disc;
+}
+li {
+    font-display: bold;
+}
+footer {
+    display:block;
+    padding: 25px 50px;
+    margin-top: 200px;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #7CED3B;
+   }
+   footer p {
+    font-size: 1.2em;
+   }
+   footer p a:hover {
+    text-decoration: underline;
+   }
+   footer .social img {
+    padding-top: 15px;
+   }
