--- a/dog/styles/faq.css
+++ b/dog/styles/faq.css
@@ -1,41 +1,71 @@
-.btn-group button {
-    background-color: #396E94; /* Green background */
-    border: 1px solid black; /* Green border */
-    color: white; /* White text */
-    padding: 10px 24px; /* Some padding */
-    cursor: pointer; /* Pointer/hand icon */
-    float: left; /* Float the buttons side by side */
-  }
-  
-  .btn-group button:not(:last-child) {
-    border-right: none; /* Prevent double borders */
-  }
-  
-  /* Clear floats (clearfix hack) */
-  .btn-group:after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  
-  /* Add a background color on hover */
-  .btn-group button:hover {
-    background-color: #396E94;
-  }
-body {
+.logo {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0px;
+  width: 70px;
+}
+#logo_link {
+  padding-top: 5px;
+  justify-self: center;
+  align-self: center;
+}
+.nav {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 0px 0px 0px 0px;
+  position: fixed;
+  font-size: 18px;
+  font-family: "Varela Round", "Nunito", Garamond;
+  color: #0978A1;
+  width: 100%;
+  height: 700px;
+}
+.home-title {
+  text-align: right;
+  padding-top: 30px;
+  font-size: 75px;
+  color: #0978A1;
+  font-family: "Varela Round";
+  padding-bottom: 80px;
+}
+.main {
     max-width: 1200px;
     margin: 0 auto;
     padding: 4em;
-    font-size: 18px;
-    text-align: center;
   }
-logo {
-    width: 20px;
-    grid-row: 1;
-    grid-column: 1;
-}
-#logo_link {
-    padding-top: 5px;
-    justify-self: center;
-    align-self: center;
-}
+  h4 {
+    font-size: 25px;
+  }
+  p {
+    font-size: 20px;
+  }
+  h6 {
+    font-size: 25px;
+    padding-top: 40px;
+  }
+  .happydogsmall {
+    float: right;
+    margin-right: 10px;
+  }
+  .girlwithdogsmall {
+    float: left;
+    margin-left: 10px;
+  }
+  footer {
+    display:block;
+    padding: 25px 50px;
+    margin-top: 200px;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #7CED3B;
+   }
+   footer p {
+    font-size: 1.2em;
+   }
+   footer p a:hover {
+    text-decoration: underline;
+   }
+   footer .social img {
+    padding-top: 15px;
+   }
+
