--- a/dog/styles/need.css
+++ b/dog/styles/need.css
@@ -33,6 +33,10 @@ h1 {
     font-size: 20px;
     color:black
 }
+answer {
+    font-size: 20px;
+    color: black;
+}
 main {
     padding-right: 570px;
     padding-top: 50px;
